publish: main: change date
generated from commit 997513e612d4fa1f0f2657079b655ee71dfc2c1a

--- a/index.html
+++ b/index.html
@@ -77,38 +77,35 @@
   </section>
 
   <section id="register">
-
     <div class="container">
-
       <div id="newsletter">
         <form
         action="//polyconf.us2.list-manage.com/subscribe/post?u=294dfa55a7b056bcc82ffae2d&amp;id=409201e872"
         method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form"
         class="validate" target="_blank" novalidate>
-        <span id="join-our-newsletter">Join our newsletter for updates</span>
-        <input type="email" value="" name="EMAIL" placeholder="Your e-mail address" class="required email" id="mce-EMAIL">
-        <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_294dfa55a7b056bcc82ffae2d_409201e872" tabindex="-1" value=""></div>
-        <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="medium green button" />
-      </form>
+          <span id="join-our-newsletter">Join our newsletter for updates</span>
+          <input type="email" value="" name="EMAIL" placeholder="Your e-mail address" class="required email" id="mce-EMAIL">
+          <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_294dfa55a7b056bcc82ffae2d_409201e872" tabindex="-1" value=""></div>
+          <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="medium green button" />
+        </form>
+      </div>
+
+      <div id="register-button">
+        <a href="https://eventil.com/polyconf/polyconf-16/register" class="green big button">Register now</a>
+        <div id="early-birds">REGULAR BATCH<br>GOES ON SALE<br>MAY 1ST AT 13:00 CET</div>
+      </div>
 
     </div>
-
-    <!-- <div id="register-button">
-    <a href="/tickets" class="green big button">Register now</a>
-    <div id="early-birds">SAVE ON<br>EARLY BIRDS<br>TICKETS</div>
-  </div> -->
-
-</div>
-</section>
+  </section>
 
 <div id="featured">
 
 <section id="tickets">
   <div class="container">
     <div class="inside">
-      <h2>Early bird tickets</h2>
-      <p>are on sale!</p>
-      <a href="https://eventil.com/polyconf/polyconf-16/register" class="button big white">Register now</a>
+      <h2>Questions?</h2>
+      <p>Feel free to contact us, we'd be happy to help!</p>
+      <a href="mailto:hello@polyconf.com" class="button big white">hello@polyconf.com</a>
     </div>
   </div>
 </section>
@@ -311,9 +308,11 @@ $("body").css("overflow","scroll");
           <figure><img src="/assets/sponsors-partners/stowarzyszenie-polska-grupa.png"           alt="PLPUG" /></figure>
         </a>
       </div>
-
-
-
+      <div class="sponsor">
+        <a href="http://pgdot.net">
+          <figure><img src="/assets/sponsors-partners/poz-dotnet.png" alt="Poznańska Grupa .NET" /></figure>
+        </a>
+      </div>
     </div>
 
     <br><br>
