--- a/satellites/paris/index.html
+++ b/satellites/paris/index.html
@@ -234,9 +234,11 @@
           <figure><img src="/assets/sponsors-partners/stowarzyszenie-polska-grupa.png"           alt="PLPUG" /></figure>
         </a>
       </div>
-
-
-
+      <div class="sponsor">
+        <a href="http://pgdot.net">
+          <figure><img src="/assets/sponsors-partners/poz-dotnet.png" alt="Poznańska Grupa .NET" /></figure>
+        </a>
+      </div>
     </div>
 
     <br><br>
