--- a/tickets/index.html
+++ b/tickets/index.html
@@ -74,19 +74,19 @@
         <div class="batch">
           <div class="label">Early birds</div>
           <div class="price">&euro;128</div>
-          <div class="ends"><span>ends Apr 23</span></div>
+          <div class="ends"><span>starts Apr 24</span></div>
         </div>
 
         <div class="batch">
           <div class="label">Regular</div>
           <div class="price">&euro;192</div>
-          <div class="ends"><span>ends May 31</span></div>
+          <div class="ends"><span>start May 1</span></div>
         </div>
 
         <div class="batch">
           <div class="label">Last call</div>
           <div class="price">&euro;256</div>
-          <div class="ends"><span>ends Jun 31</span></div>
+          <div class="ends"><span>start Jun 20</span></div>
         </div>
 
       </div>
@@ -98,7 +98,7 @@
     <div id="vat-footnote">* Price <strong>does not</strong> include 23% Polish VAT and ticketing fees.</div>
 
     <div class="text-center button-container">
-      <a href="" class="big teal button">Early bird sales starts Apr 9 (Sat)</a>
+      <a href="https://eventil.com/polyconf/polyconf-16/register" class="big teal button">Regular ticket sales starts May 1st (Sun) at 13:30 CET</a>
     </div>
 
     <div class="text-center" id="ticket-includes">
@@ -190,9 +190,11 @@
           <figure><img src="/assets/sponsors-partners/stowarzyszenie-polska-grupa.png"           alt="PLPUG" /></figure>
         </a>
       </div>
-
-
-
+      <div class="sponsor">
+        <a href="http://pgdot.net">
+          <figure><img src="/assets/sponsors-partners/poz-dotnet.png" alt="Poznańska Grupa .NET" /></figure>
+        </a>
+      </div>
     </div>
 
     <br><br>
