--- a/agenda/index.html
+++ b/agenda/index.html
@@ -619,9 +619,11 @@ vestibulum at eros. Maecenas sed diam eget risus variust amet non magna.</p>
           <figure><img src="/assets/sponsors-partners/stowarzyszenie-polska-grupa.png"           alt="PLPUG" /></figure>
         </a>
       </div>
-
-
-
+      <div class="sponsor">
+        <a href="http://pgdot.net">
+          <figure><img src="/assets/sponsors-partners/poz-dotnet.png" alt="Poznańska Grupa .NET" /></figure>
+        </a>
+      </div>
     </div>
 
     <br><br>
