--- a/sponsorship/index.html
+++ b/sponsorship/index.html
@@ -96,11 +96,11 @@
 
             <tr class="feature">
               <td class="label">Conference passes</td>
-              <td class="number">6</td>
               <td class="number">4</td>
               <td class="number">3</td>
               <td class="number">2</td>
-              <td class="number border-right">1</td>
+              <td class="number">1</td>
+              <td class="number border-right">N/A</td>
             </tr>
 
             <tr class="feature">
