publish: Merged in add-sponsors (pull request #33)
generated from commit d1e5667b4def0b4cd176b9d0dce658caec91c0c0

--- a/satellites/index.html
+++ b/satellites/index.html
@@ -102,7 +102,7 @@
       <div class="meeting" id="london-meeting">
         <h2 class="city">London</h2>
         <div class="date">May 9th, 2016</div>
-        <!-- <a href="/satellites/london" class="small green button">Learn more</a> -->
+        <a href="/satellites/london" class="small green button">Learn more</a>
         <figure><img src="/assets/london-white.svg" alt="London" /></figure>
       </div>
 
@@ -129,79 +129,79 @@
     <h2 class="color-teal">Sponsors</h2>
     <p class="lead">It is thanks to the help of our sponsors and supporters that the conference is made possible each year.<br>Have a look on who they are and what they do.</p>
 
-    <!--
     <div class="sponsors" id="main-sponsors">
-      <h3>Gold sponsors</h3>
+      <h3>Silver sponsors</h3>
       <div class="sponsor">
-        <a href="">
-          <figure><img src="" /></figure>
+        <a href="https://www.algolia.com/">
+          <figure><img src="/assets/sponsors/algolia.jpg" alt="Algolia" /></figure>
         </a>
-        <a href="/sponsors" class="tiny teal button more">Learn more</a>
+      </div>
+      <div class="sponsor">
+        <a href="https://lambdawerk.com/">
+          <figure><img src="/assets/sponsors/lambdawerk.png" alt="LambdaWerk" /></figure>
+        </a>
       </div>
     </div>
-    -->
 
-    <!--
     <div class="sponsors" id="regular-sponsors">
-      <h3>Silver Sponsors</h3>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
+      <h3>Bronze sponsors</h3>
+      <div class="sponsor">
+        <a href="http://www.oberthur.com/">
+          <figure><img src="/assets/sponsors/oberthur.png" alt="Oberthur Technologies" /></figure>
+        </a>
+      </div>
     </div>
-    -->
 
     <div class="sponsors" id="partners-supporters">
       <h3>Partners & Supporters</h3>
       <div class="sponsor">
         <a href="https://djangogirls.org/warsaw/">
-          <figure><img src="/assets/sponsors-partners/django-girls-warsaw.png" alt="Django Girls Warsaw" /></figure>
+          <figure><img src="/assets/supporters/django-girls-warsaw.png" alt="Django Girls Warsaw" /></figure>
         </a>
       </div>
       <div class="sponsor">
         <a href="http://geekgirlscarrots.org/">
-          <figure><img src="/assets/sponsors-partners/geek-girls-carrots.png"  alt="Geek Girls Carrots" /></figure>
+          <figure><img src="/assets/supporters/geek-girls-carrots.png" alt="Geek Girls Carrots" /></figure>
         </a>
       </div>
       <div class="sponsor">
         <a href="http://kobietydokodu.pl/">
-          <figure><img src="/assets/sponsors-partners/kobiety-do-kodu.png"     alt="Kobiety do Kodu" /></figure>
+          <figure><img src="/assets/supporters/kobiety-do-kodu.png" alt="Kobiety do Kodu" /></figure>
         </a>
       </div>
       <div class="sponsor">
         <a href="http://osworld.pl/">
-          <figure><img src="/assets/sponsors-partners/osworld.png"             alt="Osworld" /></figure>
+          <figure><img src="/assets/supporters/osworld.png" alt="Osworld" /></figure>
         </a>
       </div>
       <div class="sponsor">
         <a href="http://spotkania-it.pl/">
-          <figure><img src="/assets/sponsors-partners/spotkania-it.png"        alt="Spotkania IT" /></figure>
+          <figure><img src="/assets/supporters/spotkania-it.png" alt="Spotkania IT" /></figure>
         </a>
       </div>
       <div class="sponsor">
         <a href="http://torun.jug.pl/">
-          <figure><img src="/assets/sponsors-partners/torun-jug.png"           alt="Torun JUG" /></figure>
+          <figure><img src="/assets/supporters/torun-jug.png" alt="Torun JUG" /></figure>
         </a>
       </div>
       <div class="sponsor">
         <a href="http://pywaw.org">
-          <figure><img src="/assets/sponsors-partners/pywaw.png"           alt="PYWAW" /></figure>
+          <figure><img src="/assets/supporters/pywaw.png" alt="PYWAW" /></figure>
         </a>
       </div>
       <div class="sponsor">
         <a href="http://warszawa.jug.pl/">
-          <figure><img src="/assets/sponsors-partners/wjug.png"           alt="WJUG" /></figure>
+          <figure><img src="/assets/supporters/wjug.png" alt="WJUG" /></figure>
         </a>
       </div>
       <div class="sponsor">
         <a href="http://plpug.org">
-          <figure><img src="/assets/sponsors-partners/stowarzyszenie-polska-grupa.png"           alt="PLPUG" /></figure>
+          <figure><img src="/assets/supporters/stowarzyszenie-polska-grupa.png" alt="PLPUG" /></figure>
         </a>
       </div>
       <div class="sponsor">
         <a href="http://pgdot.net">
-          <figure><img src="/assets/sponsors-partners/poz-dotnet.png" alt="Poznańska Grupa .NET" /></figure>
+          <figure><img src="/assets/supporters/poz-dotnet.png" alt="Poznańska Grupa .NET" /></figure>
         </a>
       </div>
     </div>
@@ -273,12 +273,13 @@
   <a id="more-menu-link"><span></span></a>
 
 <div id="more-menu">
-  
-  <a id="close-menu-link"><span></span></a>  
+
+  <a id="close-menu-link"><span></span></a>
 
   <ul class="mobile-menu">
     <li><a href="/">About</a></li>
     <li><a href="/satellites">Satellites</a></li>
+    <li><a href="/speakers">Speakers</a></li>
     <li><a href="/sponsorship">Become a sponsor</a></li>
   </ul>
 <!--
@@ -302,7 +303,7 @@
   </ul>
 
 </div>
-  
+
   <!-- <div id="half-modal">&nbsp;</div> -->
 
 
