--- a/sponsorship/index.html
+++ b/sponsorship/index.html
@@ -484,12 +484,13 @@
   <a id="more-menu-link"><span></span></a>
 
 <div id="more-menu">
-  
-  <a id="close-menu-link"><span></span></a>  
+
+  <a id="close-menu-link"><span></span></a>
 
   <ul class="mobile-menu">
     <li><a href="/">About</a></li>
     <li><a href="/satellites">Satellites</a></li>
+    <li><a href="/speakers">Speakers</a></li>
     <li><a href="/sponsorship">Become a sponsor</a></li>
   </ul>
 <!--
@@ -513,7 +514,7 @@
   </ul>
 
 </div>
-  
+
   <!-- <div id="half-modal">&nbsp;</div> -->
 
 
