publish: Merged in add-sponsors (pull request #33)
generated from commit d1e5667b4def0b4cd176b9d0dce658caec91c0c0

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       </div>
 
       <div id="register-button">
-        <div id="early-birds">REGULAR BATCH<br>GOES ON SALE<br>MAY 1ST AT 13:00 CET</div>
+        <div id="early-birds">REGULAR TICKETS<br>ON SALE</div>
         <a href="https://eventil.com/polyconf/polyconf-16/register" class="green big button">Register now</a>
       </div>
 
