publish: Merged in add-sponsors (pull request #33)
generated from commit d1e5667b4def0b4cd176b9d0dce658caec91c0c0

--- a/satellites/index.html
+++ b/satellites/index.html
@@ -204,6 +204,11 @@
           <figure><img src="/assets/supporters/poz-dotnet.png" alt="Poznańska Grupa .NET" /></figure>
         </a>
       </div>
+      <div class="sponsor">
+        <a href="http://mobile-warsaw.pl/">
+          <figure><img src="/assets/supporters/mw_logo.svg" alt="Mobile Warsaw" /></figure>
+        </a>
+      </div>
     </div>
 
     <br><br>
