--- a/agenda/index.html
+++ b/agenda/index.html
@@ -624,6 +624,11 @@ vestibulum at eros. Maecenas sed diam eget risus variust amet non magna.</p>
           <figure><img src="/assets/supporters/poz-dotnet.png" alt="Poznańska Grupa .NET" /></figure>
         </a>
       </div>
+      <div class="sponsor">
+        <a href="http://mobile-warsaw.pl/">
+          <figure><img src="/assets/supporters/mw_logo.svg" alt="Mobile Warsaw" /></figure>
+        </a>
+      </div>
     </div>
 
     <br><br>
