--- a/satellites/warsaw/index.html
+++ b/satellites/warsaw/index.html
@@ -204,6 +204,11 @@
           <figure><img src="/assets/supporters/poz-dotnet.png" alt="Poznańska Grupa .NET" /></figure>
         </a>
       </div>
+      <div class="sponsor">
+        <a href="http://mobile-warsaw.pl/">
+          <figure><img src="/assets/supporters/mw_logo.svg" alt="Mobile Warsaw" /></figure>
+        </a>
+      </div>
     </div>
 
     <br><br>
