publish: speaker: Julia Evans
generated from commit d997d0ad46cb02f384690100d7a551f209877c1b

--- a/index.html
+++ b/index.html
@@ -259,6 +259,11 @@ $("body").css("overflow","scroll");
           <figure><img src="/assets/sponsors/oberthur.png" alt="Oberthur Technologies" /></figure>
         </a>
       </div>
+      <div class="sponsor">
+        <a href="http://www.pusher.com/">
+          <figure><img src="/assets/sponsors/pusher.png" alt="Pusher" /></figure>
+        </a>
+      </div>
     </div>
 
     <div class="sponsors" id="partners-supporters">
@@ -316,6 +321,11 @@ $("body").css("overflow","scroll");
       <div class="sponsor">
         <a href="http://mobile-warsaw.pl/">
           <figure><img src="/assets/supporters/mw_logo.svg" alt="Mobile Warsaw" /></figure>
+        </a>
+      </div>
+      <div class="sponsor">
+        <a href="https://www.rubyparis.org/">
+          <figure><img src="/assets/supporters/parisrb.png" alt="ParisRb" /></figure>
         </a>
       </div>
     </div>
