--- a/agenda/index.html
+++ b/agenda/index.html
@@ -570,6 +570,11 @@ vestibulum at eros. Maecenas sed diam eget risus variust amet non magna.</p>
           <figure><img src="/assets/sponsors/oberthur.png" alt="Oberthur Technologies" /></figure>
         </a>
       </div>
+      <div class="sponsor">
+        <a href="http://www.pusher.com/">
+          <figure><img src="/assets/sponsors/pusher.png" alt="Pusher" /></figure>
+        </a>
+      </div>
     </div>
 
     <div class="sponsors" id="partners-supporters">
@@ -627,6 +632,11 @@ vestibulum at eros. Maecenas sed diam eget risus variust amet non magna.</p>
       <div class="sponsor">
         <a href="http://mobile-warsaw.pl/">
           <figure><img src="/assets/supporters/mw_logo.svg" alt="Mobile Warsaw" /></figure>
+        </a>
+      </div>
+      <div class="sponsor">
+        <a href="https://www.rubyparis.org/">
+          <figure><img src="/assets/supporters/parisrb.png" alt="ParisRb" /></figure>
         </a>
       </div>
     </div>
