--- a/satellites/index.html
+++ b/satellites/index.html
@@ -150,6 +150,11 @@
           <figure><img src="/assets/sponsors/oberthur.png" alt="Oberthur Technologies" /></figure>
         </a>
       </div>
+      <div class="sponsor">
+        <a href="http://www.pusher.com/">
+          <figure><img src="/assets/sponsors/pusher.png" alt="Pusher" /></figure>
+        </a>
+      </div>
     </div>
 
     <div class="sponsors" id="partners-supporters">
@@ -207,6 +212,11 @@
       <div class="sponsor">
         <a href="http://mobile-warsaw.pl/">
           <figure><img src="/assets/supporters/mw_logo.svg" alt="Mobile Warsaw" /></figure>
+        </a>
+      </div>
+      <div class="sponsor">
+        <a href="https://www.rubyparis.org/">
+          <figure><img src="/assets/supporters/parisrb.png" alt="ParisRb" /></figure>
         </a>
       </div>
     </div>
