--- a/sponsorship/index.html
+++ b/sponsorship/index.html
@@ -99,7 +99,7 @@
               <td class="number">4</td>
               <td class="number">3</td>
               <td class="number">2</td>
-              <td class="number">1</td>
+              <td class="number">1*</td>
               <td class="number border-right">N/A</td>
             </tr>
 
@@ -422,6 +422,10 @@
 
         <h3>Let's talk</h3>
         <p>Contact us at <a href="mailto:hello@polyconf.com">hello@polyconf.com</a></p>
+        <br/>
+        <br/>
+        <small>* it doesn't apply for speaker travel sponsorship option </small>
+
 
       </div>
 
