publish: speaker: Julia Evans
generated from commit d997d0ad46cb02f384690100d7a551f209877c1b

--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
         <p>PolyConf mission is to promote polyglot approach to software development and foster cross-pollination between various technologies and their communities.</p>
 
       </p>
-
     </div>
-  </section>
+  </div>
+</section>
 
   <section id="grid">
     <div class="video element">
@@ -191,6 +191,8 @@
     </div>
 
   </section>
+
+
   <!--
 
   <div class="full-modal" id="video-modal">
@@ -343,6 +345,30 @@ $("body").css("overflow","scroll");
   </div>
 </section>
 
+
+<section id="about">
+  <div class="container">
+    <div class="text">
+      <h2>Terms and Conditions</h2>
+
+      <h3>Tickets</h3>
+      <p>Cancellations received before May 31 2015 are entitled to a full refund. Cancellations received after May 31, 2015 are non-refundable.</p>
+      <p>Early Bird tickets are non-refundable.</p>
+
+      <h3>Video/Audio recording</h3>
+      <p>All presentations and associated materials are the speakers’ intellectual property. Recording for commercial purposes requires permission from both the organizer and the speaker.</p>
+      <p>By attending the conference, attendees have agreed to allow the organizer to use images, audio, and video recorded content on site for educational and promotional purposes.</p>
+
+      <h3>Responsibility</h3>
+      <p>The participant acknowledges that he/she may not engage in damage claims against the Conference Organizers should the holding of the Conference be hindered or prevented by unexpected political or economic events, natural disaster, the non-appearance of speakers, or other reasons that might necessitate a program change.</p>
+      <p>Organizers may cancel the event at any time and tickets will be refunded in full without any additional fees.</p>
+
+      <h3>Code of Conduct</h3>
+      <p>PolyConf is dedicated to providing a harassment-free conference experience for everyone. We invite you to help us make PolyConf a place that is welcoming and respectful to all participants, so everyone can focus on the conference itself, and the great networking and community richness that can happen when we get together in person. We will do whatever we believe is necessary to ensure that PolyConf is a safe and productive environment for everyone.</p>
+      <p>Please bring any concerns to the immediate attention of the event staff, or contact Martyna Maszkowska at martyna@nukomeet.com. We thank our attendees for their help in keeping the event welcoming, respectful, and friendly to all participants.</p>
+    </div>
+  </div>
+  </section>
 
 
 
