publish: speaker: Julia Evans
generated from commit d997d0ad46cb02f384690100d7a551f209877c1b

--- a/agenda/index.html
+++ b/agenda/index.html
@@ -575,6 +575,11 @@ vestibulum at eros. Maecenas sed diam eget risus variust amet non magna.</p>
           <figure><img src="/assets/sponsors/pusher.png" alt="Pusher" /></figure>
         </a>
       </div>
+      <div class="sponsor">
+        <a href="https://codebeat.co/">
+          <figure><img src="/assets/sponsors/codebeat.png" alt="Codebeat" /></figure>
+        </a>
+      </div>
     </div>
 
     <div class="sponsors" id="partners-supporters">
