--- a/index.html
+++ b/index.html
@@ -266,6 +266,11 @@ $("body").css("overflow","scroll");
           <figure><img src="/assets/sponsors/pusher.png" alt="Pusher" /></figure>
         </a>
       </div>
+      <div class="sponsor">
+        <a href="https://codebeat.co/">
+          <figure><img src="/assets/sponsors/codebeat.png" alt="Codebeat" /></figure>
+        </a>
+      </div>
     </div>
 
     <div class="sponsors" id="partners-supporters">
