--- a/speakers/index.html
+++ b/speakers/index.html
@@ -734,6 +734,11 @@
           <figure><img src="/assets/sponsors/pusher.png" alt="Pusher" /></figure>
         </a>
       </div>
+      <div class="sponsor">
+        <a href="https://codebeat.co/">
+          <figure><img src="/assets/sponsors/codebeat.png" alt="Codebeat" /></figure>
+        </a>
+      </div>
     </div>
 
     <div class="sponsors" id="partners-supporters">
