--- a/venue/index.html
+++ b/venue/index.html
@@ -140,6 +140,11 @@ aaa<!DOCTYPE html>
           <figure><img src="/assets/sponsors/pusher.png" alt="Pusher" /></figure>
         </a>
       </div>
+      <div class="sponsor">
+        <a href="https://codebeat.co/">
+          <figure><img src="/assets/sponsors/codebeat.png" alt="Codebeat" /></figure>
+        </a>
+      </div>
     </div>
 
     <div class="sponsors" id="partners-supporters">
