publish: speaker: Julia Evans
generated from commit d997d0ad46cb02f384690100d7a551f209877c1b

--- a/satellites/london/index.html
+++ b/satellites/london/index.html
@@ -147,6 +147,11 @@
           <figure><img src="/assets/sponsors/codebeat.png" alt="Codebeat" /></figure>
         </a>
       </div>
+      <div class="sponsor">
+        <a href="http://www.careerslab.co/">
+          <figure><img src="/assets/sponsors/careerslab.png" alt="CareersLab" /></figure>
+        </a>
+      </div>
     </div>
 
     <div class="sponsors" id="partners-supporters">
