--- a/agenda/index.html
+++ b/agenda/index.html
@@ -580,6 +580,11 @@ vestibulum at eros. Maecenas sed diam eget risus variust amet non magna.</p>
           <figure><img src="/assets/sponsors/codebeat.png" alt="Codebeat" /></figure>
         </a>
       </div>
+      <div class="sponsor">
+        <a href="http://www.careerslab.co/">
+          <figure><img src="/assets/sponsors/careerslab.png" alt="CareersLab" /></figure>
+        </a>
+      </div>
     </div>
 
     <div class="sponsors" id="partners-supporters">
