--- a/index.html
+++ b/index.html
@@ -271,6 +271,11 @@ $("body").css("overflow","scroll");
           <figure><img src="/assets/sponsors/codebeat.png" alt="Codebeat" /></figure>
         </a>
       </div>
+      <div class="sponsor">
+        <a href="http://www.careerslab.co/">
+          <figure><img src="/assets/sponsors/careerslab.png" alt="CareersLab" /></figure>
+        </a>
+      </div>
     </div>
 
     <div class="sponsors" id="partners-supporters">
