publish: Merged in imprv-coc (pull request #35)
generated from commit 74cab16469f23a803a969ff0e02fe02d79da72c7

--- a/satellites/index.html
+++ b/satellites/index.html
@@ -129,11 +129,21 @@
     <h2 class="color-teal">Sponsors</h2>
     <p class="lead">It is thanks to the help of our sponsors and supporters that the conference is made possible each year.<br>Have a look on who they are and what they do.</p>
 
-    <div class="sponsors" id="main-sponsors">
+    <div class="sponsors" id="platinum-sponsors">
+      <h3>Platinum sponsors</h3>
+
+    </div>
+
+    <div class="sponsors" id="gold-sponsors">
+      <h3>Gold sponsors</h3>
+
+    </div>
+
+    <div class="sponsors" id="silver-sponsors">
       <h3>Silver sponsors</h3>
       <div class="sponsor">
         <a href="https://www.algolia.com/">
-          <figure><img src="/assets/sponsors/algolia.jpg" alt="Algolia" /></figure>
+          <figure><img src="/assets/sponsors/algolia.png" alt="Algolia" /></figure>
         </a>
       </div>
       <div class="sponsor">
@@ -143,7 +153,7 @@
       </div>
     </div>
 
-    <div class="sponsors" id="regular-sponsors">
+    <div class="sponsors" id="bronze-sponsors">
       <h3>Bronze sponsors</h3>
       <div class="sponsor">
         <a href="http://www.oberthur.com/">
