--- a/index.html
+++ b/index.html
@@ -240,11 +240,21 @@ $("body").css("overflow","scroll");
     <h2 class="color-teal">Sponsors</h2>
     <p class="lead">It is thanks to the help of our sponsors and supporters that the conference is made possible each year.<br>Have a look on who they are and what they do.</p>
 
-    <div class="sponsors" id="main-sponsors">
+    <div class="sponsors" id="platinum-sponsors">
+      <h3>Platinum sponsors</h3>
+
+    </div>
+
+    <div class="sponsors" id="gold-sponsors">
+      <h3>Gold sponsors</h3>
+
+    </div>
+
+    <div class="sponsors" id="silver-sponsors">
       <h3>Silver sponsors</h3>
       <div class="sponsor">
         <a href="https://www.algolia.com/">
-          <figure><img src="/assets/sponsors/algolia.jpg" alt="Algolia" /></figure>
+          <figure><img src="/assets/sponsors/algolia.png" alt="Algolia" /></figure>
         </a>
       </div>
       <div class="sponsor">
@@ -254,7 +264,7 @@ $("body").css("overflow","scroll");
       </div>
     </div>
 
-    <div class="sponsors" id="regular-sponsors">
+    <div class="sponsors" id="bronze-sponsors">
       <h3>Bronze sponsors</h3>
       <div class="sponsor">
         <a href="http://www.oberthur.com/">
@@ -376,6 +386,7 @@ $("body").css("overflow","scroll");
       <h3>Code of Conduct</h3>
       <p>PolyConf is dedicated to providing a harassment-free conference experience for everyone. We invite you to help us make PolyConf a place that is welcoming and respectful to all participants, so everyone can focus on the conference itself, and the great networking and community richness that can happen when we get together in person. We will do whatever we believe is necessary to ensure that PolyConf is a safe and productive environment for everyone.</p>
       <p>Please bring any concerns to the immediate attention of the event staff, or contact Martyna Maszkowska at martyna@nukomeet.com. We thank our attendees for their help in keeping the event welcoming, respectful, and friendly to all participants.</p>
+      <p>For details on what kinds of behaviour are not tolerated and consequences for violating these rules, we refer to the <a href="http://berlincodeofconduct.org/">Berlin Code of Conduct.</a></p>
     </div>
   </div>
   </section>
