--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -60,80 +60,106 @@
     </header>
 
     
-  
+
 <section id="sponsors-page">
   <div class="container">
 
     <h1 class="color-blue">Sponsors</h1>
     <p class="lead">It is thanks to the help of our sponsors and supporters that the conference is made possible each year.<br>Have a look on who they are and what they do.</p>
 
-    <div class="sponsors" id="main-sponsors">
-      <h3>Main sponsors</h3>
-      <div class="sponsor">
-        <figure></figure>
-        <p>Donec id elit non mi porta gravida at eget metus. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Etiam porta sem malesuada magna mollis euismod. Donec id elit non mi porta gravida at eget metus.</p>
-      </div>
-      <div class="sponsor">
-        <figure></figure>
-        <p>Donec id elit non mi porta gravida at eget metus. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Etiam porta sem malesuada magna mollis euismod. Donec id elit non mi porta gravida at eget metus.</p>
-      </div>
-      <div class="sponsor">
-        <figure></figure>
-        <p>Donec id elit non mi porta gravida at eget metus. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Etiam porta sem malesuada magna mollis euismod. Donec id elit non mi porta gravida at eget metus.</p>
+    <div class="sponsors" id="platinum-sponsors">
+      <h3>Platinum sponsors</h3>
+      <div class="row">
       </div>
     </div>
-  
-    <div class="sponsors" id="regular-sponsors">
-      <h3>Sponsors</h3>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
+
+
+    <div class="sponsors" id="gold-sponsors">
+      <h3>Gold sponsors</h3>
+      <div class="row">
+      </div>
     </div>
-  
+
+    <div class="sponsors" id="silver-sponsors">
+      <h3>Silver sponsors</h3>
+      <div class="sponsor">
+        <a href="https://www.algolia.com/">
+          <figure><img src="/assets/sponsors/algolia.png" alt="Algolia" /></figure>
+        </a>
+      </div>
+      <div class="sponsor">
+        <a href="https://lambdawerk.com/">
+          <figure><img src="/assets/sponsors/lambdawerk.png" alt="LambdaWerk" /></figure>
+        </a>
+      </div>
+    </div>
+
+    <div class="sponsors" id="bronze-sponsors">
+      <h3>Bronze sponsors</h3>
+      <div class="sponsor">
+        <a href="http://www.oberthur.com/">
+          <figure><img src="/assets/sponsors/oberthur.png" alt="Oberthur Technologies" /></figure>
+        </a>
+      </div>
+    </div>
+
     <div class="sponsors" id="partners-supporters">
       <h3>Partners & Supporters</h3>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
+      <div class="sponsor">
+        <a href="https://djangogirls.org/warsaw/">
+          <figure><img src="/assets/supporters/django-girls-warsaw.png" alt="Django Girls Warsaw" /></figure>
+        </a>
+      </div>
+      <div class="sponsor">
+        <a href="http://geekgirlscarrots.org/">
+          <figure><img src="/assets/supporters/geek-girls-carrots.png" alt="Geek Girls Carrots" /></figure>
+        </a>
+      </div>
+      <div class="sponsor">
+        <a href="http://kobietydokodu.pl/">
+          <figure><img src="/assets/supporters/kobiety-do-kodu.png" alt="Kobiety do Kodu" /></figure>
+        </a>
+      </div>
+      <div class="sponsor">
+        <a href="http://osworld.pl/">
+          <figure><img src="/assets/supporters/osworld.png" alt="Osworld" /></figure>
+        </a>
+      </div>
+      <div class="sponsor">
+        <a href="http://spotkania-it.pl/">
+          <figure><img src="/assets/supporters/spotkania-it.png" alt="Spotkania IT" /></figure>
+        </a>
+      </div>
+      <div class="sponsor">
+        <a href="http://torun.jug.pl/">
+          <figure><img src="/assets/supporters/torun-jug.png" alt="Torun JUG" /></figure>
+        </a>
+      </div>
+      <div class="sponsor">
+        <a href="http://pywaw.org">
+          <figure><img src="/assets/supporters/pywaw.png" alt="PYWAW" /></figure>
+        </a>
+      </div>
+      <div class="sponsor">
+        <a href="http://warszawa.jug.pl/">
+          <figure><img src="/assets/supporters/wjug.png" alt="WJUG" /></figure>
+        </a>
+      </div>
+      <div class="sponsor">
+        <a href="http://plpug.org">
+          <figure><img src="/assets/supporters/stowarzyszenie-polska-grupa.png" alt="PLPUG" /></figure>
+        </a>
+      </div>
+      <div class="sponsor">
+        <a href="http://pgdot.net">
+          <figure><img src="/assets/supporters/poz-dotnet.png" alt="Poznańska Grupa .NET" /></figure>
+        </a>
+      </div>
     </div>
 
-    
 
-  </div>  
+
+  </div>
 </section>
 
 
