publish: Merged in imprv-coc (pull request #35)
generated from commit 74cab16469f23a803a969ff0e02fe02d79da72c7

--- a/satellites/london/index.html
+++ b/satellites/london/index.html
@@ -224,6 +224,11 @@
           <figure><img src="/assets/supporters/parisrb.png" alt="ParisRb" /></figure>
         </a>
       </div>
+      <div class="sponsor">
+        <a href="https://www.facebook.com/Krakow.Ruby.User.Group/">
+          <figure><img src="/assets/supporters/krug.png" alt="Kraków Ruby User Group" /></figure>
+        </a>
+      </div>
     </div>
 
     <br><br>
