--- a/agenda/index.html
+++ b/agenda/index.html
@@ -657,6 +657,11 @@ vestibulum at eros. Maecenas sed diam eget risus variust amet non magna.</p>
           <figure><img src="/assets/supporters/parisrb.png" alt="ParisRb" /></figure>
         </a>
       </div>
+      <div class="sponsor">
+        <a href="https://www.facebook.com/Krakow.Ruby.User.Group/">
+          <figure><img src="/assets/supporters/krug.png" alt="Kraków Ruby User Group" /></figure>
+        </a>
+      </div>
     </div>
 
     <br><br>
