--- a/index.html
+++ b/index.html
@@ -348,6 +348,11 @@ $("body").css("overflow","scroll");
           <figure><img src="/assets/supporters/parisrb.png" alt="ParisRb" /></figure>
         </a>
       </div>
+      <div class="sponsor">
+        <a href="https://www.facebook.com/Krakow.Ruby.User.Group/">
+          <figure><img src="/assets/supporters/krug.png" alt="Kraków Ruby User Group" /></figure>
+        </a>
+      </div>
     </div>
 
     <br><br>
