publish: Merged in imp-agenda2 (pull request #45)
generated from commit ddce66fad8bc2ad2c3b2bacb73678aefea559063

--- a/contact/index.html
+++ b/contact/index.html
@@ -37,7 +37,7 @@
 
   
 </head>
-<body class="tickets">
+<body class="contact">
   <div id="wrapper">
 
     <header>
@@ -48,7 +48,7 @@
     <li ><a href="/satellites"><span>Satellites</span></a></li>
     <li ><a href="/agenda"><span>Agenda</span></a></li>
     <li ><a href="/speakers"><span>Speakers</span></a></li>
-    <li ><a href="/contact"><span>contact</span></a></li>
+    <li  class="active" ><a href="/contact"><span>contact</span></a></li>
     <li ><a href="/venue"><span>Venue</span></a></li>
     <li ><a href="http://jobs.polyconf.com"><span>Jobs</span></a></li>
     <li><a href="#" id="more-text-link"><span>More</span><i><span></span></i></a></li>
@@ -59,57 +59,47 @@
 
     
 
-<section id="tickets">
+<section id="contact">
+
   <div class="container">
 
-    <h1 class="color-blue">Tickets</h1>
-    <p class="lead"><br></p>
+    <h1 class="color-blue">Contact</h1>
 
-    <div id="timeline">
+      <p class="contact-us">You can always contact us at <a href="mailto:hello@polyconf.com">hello@polyconf.com</a></p>
 
-      <div id="batches">
+      <div class="main row">
+        <div class="organizer">
 
-        <div class="batch">
-          <div class="label">Early birds</div>
-          <div class="price">&euro;128</div>
-          <div class="ends"><span>starts Apr 24</span></div>
+          <h3>Organizer</h3>
+
+          <h4>Zaiste Foundation</h4>
+          <p>Grobla 7/20<br>
+            61-858 Poznań, Polska / Poland<br><br>
+            NIP / VAT ID 7792424014<br>
+            REGON: 302809535<br>
+            KRS: 0000519071<br>
+            Bank Zachodni WBK, SWIFT: WBKPPLPP<br>
+            PL02 1090 1447 0000 0001 3017 0234
+          </p>
+
         </div>
-
-        <div class="batch">
-          <div class="label">Regular</div>
-          <div class="price">&euro;192</div>
-          <div class="ends"><span>start May 1</span></div>
+        <div class="people">
+          <h3>People</h3>
+          <div class="row">
+            <div class="person">
+              <figure><img src="/assets/zaiste.jpg" /></figure>
+              <h4>Zaiste</h4>
+            </div>
+            <div class="person">
+              <figure><img src="/assets/martyna.jpg" /></figure>
+              <h4>Martyna</h4>
+            </div>
+          </div>
         </div>
-
-        <div class="batch">
-          <div class="label">Last call</div>
-          <div class="price">&euro;256</div>
-          <div class="ends"><span>start Jun 20</span></div>
-        </div>
-
       </div>
 
-      <div id="line"><div id="passed"></div></div>
-
-    </div>
-
-    <div id="vat-footnote">* Price <strong>does not</strong> include 23% Polish VAT and ticketing fees.</div>
-
-    <div class="text-center button-container">
-      <a href="https://eventil.com/polyconf/polyconf-16/register" class="big teal button">Regular ticket sales starts May 1st (Sun) at 13:30 CET</a>
-    </div>
-
-    <div class="text-center" id="ticket-includes">
-      <h3>THE TICKET INCLUDES</h3>
-      <ul>
-        <li>Entry to the conference on Jun 30, Jul 1 and Jul 2</li>
-        <li>Entry to the parties on each day of the conference</li>
-        <li>Access to satellite events and many opportunities to connect with people</li>
-        <li>Drinks & Refreshments</li>
-      </ul>
-    </div>
-
   </div>
+
 </section>
 
 <section id="sponsors">
