--- a/practical/index.html
+++ b/practical/index.html
@@ -37,7 +37,7 @@
 
   
 </head>
-<body class="tickets">
+<body class="venue">
   <div id="wrapper">
 
     <header>
@@ -49,7 +49,7 @@
     <li ><a href="/agenda"><span>Agenda</span></a></li>
     <li ><a href="/speakers"><span>Speakers</span></a></li>
     <li ><a href="/contact"><span>contact</span></a></li>
-    <li ><a href="/venue"><span>Venue</span></a></li>
+    <li  class="active" ><a href="/venue"><span>Venue</span></a></li>
     <li ><a href="http://jobs.polyconf.com"><span>Jobs</span></a></li>
     <li><a href="#" id="more-text-link"><span>More</span><i><span></span></i></a></li>
   </ul>
@@ -59,57 +59,14 @@
 
     
 
-<section id="tickets">
+<section id="venue">
+
   <div class="container">
 
-    <h1 class="color-blue">Tickets</h1>
-    <p class="lead"><br></p>
-
-    <div id="timeline">
-
-      <div id="batches">
-
-        <div class="batch">
-          <div class="label">Early birds</div>
-          <div class="price">&euro;128</div>
-          <div class="ends"><span>starts Apr 24</span></div>
-        </div>
-
-        <div class="batch">
-          <div class="label">Regular</div>
-          <div class="price">&euro;192</div>
-          <div class="ends"><span>start May 1</span></div>
-        </div>
-
-        <div class="batch">
-          <div class="label">Last call</div>
-          <div class="price">&euro;256</div>
-          <div class="ends"><span>start Jun 20</span></div>
-        </div>
-
-      </div>
-
-      <div id="line"><div id="passed"></div></div>
-
-    </div>
-
-    <div id="vat-footnote">* Price <strong>does not</strong> include 23% Polish VAT and ticketing fees.</div>
-
-    <div class="text-center button-container">
-      <a href="https://eventil.com/polyconf/polyconf-16/register" class="big teal button">Regular ticket sales starts May 1st (Sun) at 13:30 CET</a>
-    </div>
-
-    <div class="text-center" id="ticket-includes">
-      <h3>THE TICKET INCLUDES</h3>
-      <ul>
-        <li>Entry to the conference on Jun 30, Jul 1 and Jul 2</li>
-        <li>Entry to the parties on each day of the conference</li>
-        <li>Access to satellite events and many opportunities to connect with people</li>
-        <li>Drinks & Refreshments</li>
-      </ul>
-    </div>
+    <h1 class="color-blue">Practical information</h1>
 
   </div>
+
 </section>
 
 <section id="sponsors">
