--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -46,14 +46,12 @@
   <ul>
     <li ><a href="/"><span>About</span></a></li>
     <li ><a href="/satellites"><span>Satellites</span></a></li>
-    <!-- <li class="soon"><a href="#"><span>Agenda</span></a></li> -->
-    <!-- <li ><a href="/tickets"><span>Tickets</span></a></li> -->
+    <li ><a href="/agenda"><span>Agenda</span></a></li>
     <li ><a href="/speakers"><span>Speakers</span></a></li>
-    <!-- <li class="soon"><a href="#"><span>Speakers</span></a></li> -->
-    <li ><a href="/sponsorship"><span>Become a sponsor</span></a></li>
-<!--     <li ><a href="/venue"><span>Venue</span></a></li> -->
-<!--     <li ><a href="/jobs"><span>Jobs</span></a></li> -->
-<!--     <li><a href="#" id="more-text-link"><span>More</span><i><span></span></i></a></li> -->
+    <li ><a href="/contact"><span>contact</span></a></li>
+    <li ><a href="/venue"><span>Venue</span></a></li>
+    <li ><a href="http://jobs.polyconf.com"><span>Jobs</span></a></li>
+    <li><a href="#" id="more-text-link"><span>More</span><i><span></span></i></a></li>
   </ul>
 </nav>
 
@@ -155,6 +153,36 @@
           <figure><img src="/assets/supporters/poz-dotnet.png" alt="Poznańska Grupa .NET" /></figure>
         </a>
       </div>
+      <div class="sponsor">
+        <a href="http://mobile-warsaw.pl/">
+          <figure><img src="/assets/supporters/mw_logo.svg" alt="Mobile Warsaw" /></figure>
+        </a>
+      </div>
+      <div class="sponsor">
+        <a href="https://www.rubyparis.org/">
+          <figure><img src="/assets/supporters/parisrb.png" alt="ParisRb" /></figure>
+        </a>
+      </div>
+      <div class="sponsor">
+        <a href="https://www.facebook.com/Krakow.Ruby.User.Group">
+          <figure><img src="/assets/supporters/krug.png" alt="Kraków Ruby User Group" /></figure>
+        </a>
+      </div>
+      <div class="sponsor">
+        <a href="http://trojmiasto.jug.pl/pl">
+          <figure><img src="/assets/supporters/trojmiasto-jug.svg" alt="Trójmiasto JUG" /></figure>
+        </a>
+      </div>
+      <div class="sponsor">
+        <a href="http://www.juglodz.pl/">
+          <figure><img src="/assets/supporters/jug-lodz.png" alt="JUG Łódź" /></figure>
+        </a>
+      </div>
+      <div class="sponsor">
+        <a href="https://www.womenwhocode.com/berlin">
+          <figure><img src="/assets/supporters/women-who-code.png" alt="Women Who Code" /></figure>
+        </a>
+      </div>
     </div>
 
 
@@ -219,10 +247,15 @@
   <a id="close-menu-link"><span></span></a>
 
   <ul class="mobile-menu">
-    <li><a href="/">About</a></li>
-    <li><a href="/satellites">Satellites</a></li>
-    <li><a href="/speakers">Speakers</a></li>
-    <li><a href="/sponsorship">Become a sponsor</a></li>
+    <li class="show-on-mobile"><a href="/">About</a></li>
+    <li class="show-on-more show-on-mobile"><a href="/satellites">Satellites</a></li>
+    <li class="show-on-mobile"><a href="/agenda">Agenda</a></li>
+    <li class="show-on-mobile"><a href="/speakers">Speakers</a></li>
+    <li class="show-on-more show-on-mobile"><a href="/sponsorship">Become a sponsor</a></li>
+    <li class="show-on-more show-on-mobile"><a href="/practical">Practical information</a></li>
+    <li class="show-on-mobile"><a href="/venue">Venue</a></li>
+    <li class="show-on-mobile"><a href="/contact">Contact</a></li>
+    <li class="show-on-more show-on-mobile"><a href="/terms">Terms and Conditions</a></li>
   </ul>
 <!--
   <ul class="none">
@@ -235,13 +268,13 @@
 -->
   <h3>Previous editions</h3>
   <ul>
-    <li><a href="#">PolyConf 2015</a></li>
-    <li><a href="#">PolyConf 2014</a></li>
+    <li class="show-on-more show-on-mobile"><a href="#">PolyConf 2015</a></li>
+    <li class="show-on-more show-on-mobile"><a href="#">PolyConf 2014</a></li>
   </ul>
   <h3>Follow us</h3>
   <ul class="social">
-    <li><a href="#" class="facebook">&nbsp;</a></li>
-    <li><a href="#">&nbsp;</a></li>
+    <li class="show-on-more show-on-mobile"><a href="#" class="facebook">&nbsp;</a></li>
+    <li class="show-on-more show-on-mobile"><a href="#">&nbsp;</a></li>
   </ul>
 
 </div>
@@ -253,7 +286,7 @@
   
   <script type="text/javascript" src="/assets/vendor.eebab789d59b4096484eedce8c5f159b.js"></script>
   
-  <script type="text/javascript" src="/assets/app.edc08af01792298ad829c2426682ecdf.js"></script>
+  <script type="text/javascript" src="/assets/app.33087248ff2c99ad39ae98581cbfc5a0.js"></script>
   
 
   <script type="text/javascript">
