publish: Merged in imp-agenda2 (pull request #45)
generated from commit ddce66fad8bc2ad2c3b2bacb73678aefea559063

--- a/practical/index.html
+++ b/practical/index.html
@@ -121,6 +121,11 @@
           <figure><img src="/assets/sponsors/careerslab.png" alt="CareersLab" /></figure>
         </a>
       </div>
+      <div class="sponsor">
+        <a href="http://www.stylefruits.de/">
+          <figure><img src="/assets/sponsors/stylefruits.png" alt="StyleFruits" /></figure>
+        </a>
+      </div>
     </div>
 
     <div class="sponsors" id="partners-supporters">
