--- a/index.html
+++ b/index.html
@@ -284,6 +284,11 @@ $("body").css("overflow","scroll");
           <figure><img src="/assets/sponsors/careerslab.png" alt="CareersLab" /></figure>
         </a>
       </div>
+      <div class="sponsor">
+        <a href="http://www.stylefruits.de/">
+          <figure><img src="/assets/sponsors/stylefruits.png" alt="StyleFruits" /></figure>
+        </a>
+      </div>
     </div>
 
     <div class="sponsors" id="partners-supporters">
