publish: Merged in imp-agenda2 (pull request #45)
generated from commit ddce66fad8bc2ad2c3b2bacb73678aefea559063

--- a/index.html
+++ b/index.html
@@ -289,6 +289,11 @@ $("body").css("overflow","scroll");
           <figure><img src="/assets/sponsors/stylefruits.png" alt="StyleFruits" /></figure>
         </a>
       </div>
+      <div class="sponsor">
+        <a href="https://8thlight.com">
+          <figure><img src="/assets/sponsors/8thlight.jpg" alt="8th Light" /></figure>
+        </a>
+      </div>
     </div>
 
     <div class="sponsors" id="partners-supporters">
