--- a/satellites/london/index.html
+++ b/satellites/london/index.html
@@ -195,6 +195,11 @@
           <figure><img src="/assets/sponsors/8thlight.jpg" alt="8th Light" /></figure>
         </a>
       </div>
+      <div class="sponsor">
+        <a href="http://www.protel.com.tr/en">
+          <figure><img src="/assets/sponsors/protel.png" alt="Protel" /></figure>
+        </a>
+      </div>
     </div>
 
     <div class="sponsors" id="partners-supporters">
